--- a/Machine Learning/Jupyter/Titanic.ipynb
+++ b/Machine Learning/Jupyter/Titanic.ipynb
@@ -463,11 +463,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Split the database"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(data.drop('Survived', axis = 1),\n",
+    "                                                   data['Survived'], test_size = 0.3,\n",
+    "                                                   random_state)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
